  channel name from other servers
- Fixed SVSKILL sending an illegal (wrong direction) QUIT right after, #0003307
- Disallowing channels with : in them, it's not worth to risk breakage of 32* to 33*,
  services, and other things like odd-extbans and things we haven't thought about,
  all for allowing one silly character.
- #0003060 reported by Robby22, patched by WolfSage, regarding remote
  rehashing -ssl / -garbage is not Global'd, and a bugfix to an earlier
  WolfSage patch
- #0003092 reported by tabrisnet, patched by WolfSage, regarding documentation says
  link::bind-ip is optional, but not specifying it produces an error
- #0003313 reported by Stealth, regarding not erroring/warning when me::name
  is bigger than HOSTLEN, from now it will error on config read.
- #0002040 reported by aquanight, removing dependancy on +l for +L. This
  will be backwards compatible as well, SJOIN doesn't care (TM) and mode
  doesn't either in case of a server sending it. So this will be just a
  client protocol modification. Also pulled out a modification that got in
  accidentially.
- #0002318 reported by Stealth, regarding small error in oper block
  documentation
- #0003139 reported by vonitsanet, improving error messages on /connect
  when trying to /connect to a server with wildcards (* and ?) in the link 
  block. We also raise an error if link::options::autoconnect is used
  together with wildcards in hostname.
- #0002549 reported by Ostdeutschland, regarding lacking information
  about SQUIT in help.conf
- #0003327 reported by fbi, regarding a unreferenced and duplicate
  m_opermotd/m_motd in core
- #0003333 reported by fbi, regarding a unreferenced and duplicate
  m_botmotd in core and modules
- A bug was introduced in the patch for #0003139. Patched by WolfSage
- #0002533 reported by Dodge_Ram, patched by WolfSage, regarding notices 
  not being sent when /*line and /shun are used to request stats 
- Removed class.h and minor references to aClass. Patched by WolfSage